# opengl-engine

./: .clang-format  .gitignore  3  CMakeLists.txt  README.md  imgui.ini  shader.vs
include/: CubeScene.h  FPCamera.h  Game.h  Pausable.h  PositionTexture.h  SampleVertices.h  Shader.h  Texture.h
include/Camera/: Camera.h  CameraInputHandler.h  FPCamera.h
include/Command/: CameraMovement.h  Command.h
include/Command/Camera/: CameraBackward.h  CameraCommand.h  CameraDown.h  CameraForward.h  CameraLeft.h  CameraRight.h  CameraUp.h
include/GPUData/: GPUData.h  Position.h  PositionNormals.h  PositionNormalsTexture.h
include/GameObject/: Cuboid.h  GameObject.h  Plane.h
include/GameObject/Interfaces/: Collidable.h
include/Model/: Mesh.h  Model.h
include/Scene/: BetterLightingScene.h  ColoursScene.h  CubeScene.h  DiffuseScene.h  ImguiScene.h  LightMapScene.h  MenuScene.h  ModelScene.h  PhysicsScene.h  PlaneScene.h  Scene.h
resources/: cubescene.fs  cubescene.vs  lighting1.fs  lightingDiffuse.fs  lightingDiffuse.vs  lightingcube1.vs  materials.fs  model_loading.fs  normaltexturedcube.fs  normaltexturedcube.vs  uniformcolour.fs
src/: CubeScene.cpp  FPCamera.cpp  GPUData.cpp  Game.cpp  Pausable.cpp  PositionTexture.cpp  Scene.cpp  Shader.cpp  Texture.cpp  main.cpp
src/Camera/: Camera.cpp  CameraInputHandler.cpp  FPCamera.cpp
src/Command/: CameraMovement.cpp  Command.cpp
src/Command/Camera/: CameraBackward.cpp  CameraCommand.cpp  CameraDown.cpp  CameraForward.cpp  CameraLeft.cpp  CameraRight.cpp  CameraUp.cpp
src/GPUData/: GPUData.cpp  Position.cpp  PositionNormals.cpp  PositionNormalsTexture.cpp  PositionTexture.cpp
src/GameObject/: Cuboid.cpp  GameObject.cpp  Plane.cpp
src/GameObject/Interfaces/: Collidable.cpp
src/Model/: Mesh.cpp  Model.cpp
src/Scene/: BetterLightingScene.cpp  ColoursScene.cpp  CubeScene.cpp  DiffuseScene.cpp  ImguiScene.cpp  LightMapScene.cpp  MenuScene.cpp  ModelScene.cpp  PhysicsScene.cpp  PlaneScene.cpp  Scene.cpp
